--- a/COMP90055_Code_1306166_Siqi_Zhong.ipynb
+++ b/COMP90055_Code_1306166_Siqi_Zhong.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Code for research project - "
+    "# Code for research project - Real-time Route Planning for Reducing Pedestrian
+Pollution Exposure in Urban Areas "
    ]
   },
   {
